Arreglar editar equipo

--- a/proyecto/libelulas/equipo/templates/equipo/equipo_detail.html
+++ b/proyecto/libelulas/equipo/templates/equipo/equipo_detail.html
@@ -2,6 +2,15 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 {% block main %}
+
+{% if messages %}
+{% for message in messages %}
+  <div class="{{ message.tags }} messages" id="message">
+      <span class="">{{ message }}</span>
+    {% endfor %}
+  </div>
+{% endif %}
+
 <div class="container">
   <div class="row tab-row">
     <div class="col s12">
