--- a/proyecto/libelulas/templates/base.html
+++ b/proyecto/libelulas/templates/base.html
@@ -25,6 +25,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/js/materialize.min.js"></script>
     <script>
     $(document).ready(function(){
+        $('.modal').modal();
       $('select').formSelect();
       $('.sidenav').sidenav();
       $('.timepicker').timepicker({
