--- a/proyecto/libelulas/jugadora/templates/jugadora/ver_jugadoras.html
+++ b/proyecto/libelulas/jugadora/templates/jugadora/ver_jugadoras.html
@@ -65,13 +65,10 @@
                     <p>A bunch of text</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Cancelar</a>
+                    <a class="modal-action modal-close waves-effect waves-green btn-flat ">Cancelar</a>
                     <button class="submit" type="submit">Borrar</button>
-
-
-
                 </form>
-            </div>
+        </div>
 
         </div>
 
