--- a/proyecto/libelulas/jugadora/templates/jugadora/ver_jugadoras.html
+++ b/proyecto/libelulas/jugadora/templates/jugadora/ver_jugadoras.html
@@ -10,6 +10,9 @@
     {% endfor %}
   </div>
 {% endif %}
+<div class="container-title">
+  <h2>Lista de Jugadoras</h2>
+</div>
 <div class="container">
   <div class="row">
     <div class="fixed-action-btn horizontal click-to-toggle">
