--- a/proyecto/libelulas/templates/base.html
+++ b/proyecto/libelulas/templates/base.html
@@ -30,11 +30,11 @@
       $('.timepicker').timepicker({
         twelveHour: false
       });
-
+      $('.modal').modal();
       $('ul.tabs').tabs();
 
     });
-    </script>  
+    </script>
   </body>
   <script type="text/javascript" src="{% static '/index.js' %}">
   </script>
