--- a/proyecto/libelulas/equipo/templates/equipo/equipo_confirm_delete.html
+++ b/proyecto/libelulas/equipo/templates/equipo/equipo_confirm_delete.html
@@ -1,7 +1,16 @@
-    <form  action="{% url 'equipo:borrar_equipo' equipo.id %}" method="POST" enctype="multipart/form-data">`
-
-
-  {% csrf_token %}
+<div class="modal" id="delete">
+  <form  action="{% url 'equipo:borrar_equipo' equipo.id %}" method="POST" enctype="multipart/form-data">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal">×</button>
+      <h3>Eliminar Equipo</h3>
+    </div>
+    <div class="modal-body">
+      {% csrf_token %}
+      <!-- {{ form.as_p}} -->
+    </div>
     <p>Are you sure you want to delete "{{ object }}"?</p>
-    <input type="submit" value="Confirm" />
-</form>
+    <div class="modal-footer">
+      <input type="submit" value="Confirm" />
+    </div>
+  </form>
+</div>
