--- a/proyecto/libelulas/templates/base.html
+++ b/proyecto/libelulas/templates/base.html
@@ -14,6 +14,8 @@
   </head>
    {% block navbar %}{% include "nav.html" %}{% endblock navbar %}
   <body>
+    <div class="modal" id="delete">
+    </div>
     <div class="main">
       {% block main %}{% endblock %}
     </div>
@@ -30,10 +32,20 @@
       $('.timepicker').timepicker({
         twelveHour: false
       });
-      $('.modal').modal();
+      // $('.modal').modal();
       $('ul.tabs').tabs();
 
+      $(".delete-button").click(function(ev) { // for each edit contact url
+        ev.preventDefault(); // prevent navigation
+        var url = $(this).data("form"); // get the contact form url
+        $("#delete").load(url, function() { // load the url into the modal
+          $(this).modal(); // display the modal on url load
+          $(this).toggleClass('display');
+        });
+        return false; // prevent the click propagation
+      })
     });
+
     </script>
   </body>
   <script type="text/javascript" src="{% static '/index.js' %}">
