--- a/proyecto/libelulas/equipo/templates/equipo/agregar_equipo.html
+++ b/proyecto/libelulas/equipo/templates/equipo/agregar_equipo.html
@@ -93,7 +93,7 @@
       {{ form.hora.errors }}
     <div class="container-button">
       <button class="cancel">Cancelar</button>
-      <button class="submit" type="submit">Actualizar</button>
+      <button class="submit" type="submit">Guardar</button>
     </div>
   </div>
 </form>
