--- a/proyecto/libelulas/jugadora/templates/jugadora/agregar_jugadora.html
+++ b/proyecto/libelulas/jugadora/templates/jugadora/agregar_jugadora.html
@@ -100,7 +100,7 @@
 
     <div class="container-button">
       <button class="cancel">Cancelar</button>
-      <button class="submit" type="submit">Enviar</button>
+      <button class="submit" type="submit">Guardar</button>
     </div>
   </div>
 </form>
