--- a/proyecto/libelulas/equipo/templates/equipo/equipo_list.html
+++ b/proyecto/libelulas/equipo/templates/equipo/equipo_list.html
@@ -15,7 +15,7 @@
       <span class="title"><a href="{% url 'equipo:detalle_equipo' Equipo.id %}">{{ Equipo.nombre }}</a></span>
       <p>Representante: {{ Equipo.representante }}</p>
       <div class="secondary-content">
-        <a href="#" data-form="{% url 'equipo:borrar_equipo' Equipo.id %}" class="delete-button">
+        <a href="#" data-target="delete" data-form="{% url 'equipo:borrar_equipo' Equipo.id %}" class="delete-button">
           <i class="medium material-icons icon-red">delete</i>
         </a>
           <a href="{% url 'equipo:editar_equipo' Equipo.id %}">
