--- a/proyecto/libelulas/static/index.css
+++ b/proyecto/libelulas/static/index.css
@@ -345,7 +345,23 @@ p {
   width: 100%;
 }
 
-.display {
-  display: initial !important;
-  z-index: 10 !important;
+.delete-color {
+  background-color: #ff7178;
+  border-radius: 50px;
+  border-style: none;
+  box-shadow: 0 8px 6px 0 rgba(239, 239, 239, 0.47);
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  letter-spacing: 43;
+  padding: 0.75em 2.62em 0.75em 2.62em;
+}
+
+.cancel-delete {
+  border: solid 2px #81889d;
+  color: #81889d;
+}
+
+.modal {
+  padding: 1.5em;
 }
