--- a/proyecto/libelulas/equipo/templates/equipo/equipo_list.html
+++ b/proyecto/libelulas/equipo/templates/equipo/equipo_list.html
@@ -5,6 +5,9 @@
   <body>
     <div class="container" id="gansito">
 
+        <h1>Equipos</h1>
+
+
 
 
  <ul class="collection">
@@ -23,6 +26,9 @@
 
       
     </li>
+
+      {% empty %}
+    <li>No hay equipos registrados aun.</li>
                                       {% endfor %}
 
   </ul>
