--- a/proyecto/libelulas/equipo/templates/equipo/eliminar_jugadora.html
+++ b/proyecto/libelulas/equipo/templates/equipo/eliminar_jugadora.html
@@ -1,4 +1,4 @@
-<form action="{% url 'equipo:eliminar_jugadora' 42 9 %}" method="post">
+<form action="{% url 'equipo:eliminar_jugadora' equipo_id idJugadora %}" method="post">
   {% csrf_token %}
   <div class="modal-content">
     <h4>Modal Header</h4>
