--- a/proyecto/libelulas/equipo/templates/equipo/equipo_detail.html
+++ b/proyecto/libelulas/equipo/templates/equipo/equipo_detail.html
@@ -71,7 +71,7 @@
           <p><strong>Posición:</strong> {{ jugadora.Posicion }}</p>
         </div>
         <div class="secondary-content">
-          <a data-target="delete" data-form="{% url 'equipo:eliminar_jugadora' equipo.id jugadora.id  %}" class="delete-button">
+          <a class="modal-trigger delete-button" href="#borrarJugadorEquipoModal">
             <i class="medium material-icons icon-red">delete</i>
           </a>
           <a href="{% url 'jugadora:editar_jugadora' jugadora.id %}">
@@ -79,9 +79,21 @@
            </a>
         </div>
       </li>
-      {% endfor %}
+      <div id="borrarJugadorEquipoModal" class="modal modal-fixed-footer">
+        <form id="BorrarJugadoraID" action="{% url 'equipo:eliminar_jugadora' equipo.id jugadora.id %}" method="post">
+          {% csrf_token %}
+          <div class="modal-content">
+            <h4>Modal Header</h4>
+            <p>A bunch of text</p>
+          </div>
+          <div class="modal-footer">
+            <button id="cancel" type="button" class="modal-action modal-close waves-effect cancel cancel-delete" data-target="delete">Cancelar</button>
+            <button class="submit" type="submit">Borrar</button>
+        </form>
+        </div>
+        {% endfor %}
     </ul>
+    </div>
   </div>
-</div>
 
-{% endblock %}
+  {% endblock %}
