Arreglar vista de lista de torneo

--- a/proyecto/libelulas/torneo/templates/torneo/torneo_list.html
+++ b/proyecto/libelulas/torneo/templates/torneo/torneo_list.html
@@ -1,96 +1,31 @@
+ {% extends "base.html" %}
+ {% load staticfiles %}
+ {% block main %}
 
-
-
-<!doctype html>
-{% extends "base.html" %}
-{% load staticfiles %}
-{% block main %}
-  <body>
-    <div class="container" id="gansito">
-
-    <h1>Torneos</h1>
-
-
-
- <ul class="collection">
-  {% for Torneo in lista_torneos %}
-    <li class="collection-item avatar">
-
-     <img src="{{ Equipo.logo.url }}" alt="" class="circle">
+<div class="container">
+  <h1>Torneos</h1>
+  <ul class="collection">
+    {% for Torneo in lista_torneos %}
+    <li class="collection-item avatar fix">
       <span class="title"><a href="{% url 'torneo:detalle_torneo' Torneo.id %}">{{ Torneo.nombre }}</a></span>
       <p>Fecha: {{ Torneo.fechaInicio }}</p>
-
-
-<div class="secondary-content">
-
-    <a href="" ><i class="material-icons">edit</i></a>
-      <a href="" ><i class="material-icons">delete_forever</i></a>
-
- </div>
-
-
+      <div class="secondary-content">
+        <a href="">
+          <i class="medium material-icons icon-red">delete</i>
+        </a>
+        <a href="">
+           <i class="medium material-icons icon-blue">mode_edit</i>
+         </a>
+      </div>
     </li>
-
-      {% empty %}
+    {% empty %}
     <li>No hay torneos registrados aun.</li>
-                                      {% endfor %}
-
+    {% endfor %}
   </ul>
-
-
-
-
-
-
-
   <div class="fixed-action-btn horizontal click-to-toggle">
-    <a class="btn-floating btn-large red" href="{% url 'torneo:crear_torneo'%}">
-      <i class="material-icons waves-effect waves-light red">add</i>
-    </a>
+    <a class="btn-floating btn-large red-background" href="{% url 'torneo:crear_torneo'%}">
+    <i class="material-icons waves-effect waves-light">add</i>
+  </a>
   </div>
-
-
-    </div>
-
-
- </body>
+</div>
 {% endblock %}
-
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
