Modificar settings proyecto

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,12 +1,12 @@
-{% load staticfiles %}
+{% load static %}
   <nav>
     <div class="nav-wrapper">
       <div class="navito">
       <a href="#!" class="brand-logo">
          <img class="logo-plidi" src="{% static 'media/logo.svg' %}"/>
-        
+
       </a>
-        
+
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><div class="wellcome-pack"><h6 id="paketaxo">¡BIENVENIDO POLICARPIO!</h6></div></li>
@@ -16,7 +16,7 @@
         <li><a href="#">GALERIA</a></li>
         <li><a href="#">ORGANIZADORES</a></li>
         <li><a href="#"><i class="material-icons">exit_to_app</i></a></li>
-        
+
       </ul>
       </div>
     </div>
@@ -31,4 +31,3 @@
         <li><a href="#">ORGANIZADORES</a></li>
         <li><a href="#"><i class="material-icons">exit_to_app</i></a></li>
   </ul>
-  
